--- a/package.json
+++ b/package.json
@@ -1,67 +1,69 @@
 {
-    "name": "vue",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "engines": {
-      "node": "8.9.4"
-    },
-    "scripts": {
-      "start": "gulp"
-    },
+  "name": "vue",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "engines": {
+    "node": "8.9.4"
+  },
+  "scripts": {
+    "build": "webpack"
+  },
   "dependencies": {
-      "babel-cli": "6.26.0",
-      "babel-core": "6.26.0",
-      "babel-preset-env": "1.6.1",
-      "browser-sync": "2.23.5",
-      "del": "3.0.0",
-      "eslint": "4.15.0",
-      "eslint-plugin-requirejs": "3.1.1",
-      "gulp": "github:gulpjs/gulp#4.0",
-      "gulp-autoprefixer": "4.1.0",
-      "gulp-cached": "1.1.1",
-      "gulp-check-filesize": "2.0.1",
-      "gulp-cli": "2.0.0",
-      "gulp-cssnano": "2.1.2",
-      "gulp-debug": "3.2.0",
-      "gulp-eslint": "4.0.1",
-      "gulp-exec": "3.0.1",
-      "gulp-filter": "5.1.0",
-      "gulp-foreach": "0.1.0",
-      "gulp-html-replace": "1.6.2",
-      "gulp-htmlmin": "4.0.0",
-      "gulp-if": "2.0.2",
-      "gulp-imagemin": "4.1.0",
-      "gulp-load-plugins": "1.5.0",
-      "gulp-newer": "1.4.0",
-      "gulp-notify": "3.1.0",
-      "gulp-plumber": "1.1.0",
-      "gulp-rename": "1.2.2",
-      "gulp-replace": "0.6.1",
-      "gulp-sass": "3.1.0",
-      "gulp-sourcemaps": "2.6.3",
-      "gulp-svgmin": "1.2.4",
-      "gulp-svgstore": "6.1.1",
-      "gulp-uglify": "3.0.0",
-      "gulp-util": "3.0.8",
-      "gulp.spritesmith": "6.9.0",
-      "imagemin-advpng": "4.0.0",
-      "imagemin-guetzli": "1.0.0",
-      "imagemin-pngout": "2.0.0",
-      "imagemin-pngquant": "5.0.1",
-      "imagemin-zopfli": "5.1.0",
-      "mathsass": "0.10.1",
-      "merge-stream": "1.0.1",
-      "modernizr": "3.5.0",
-      "node-notifier": "5.1.2",
-      "node-sass": "4.7.2",
-      "redux": "3.7.2",
-      "rxjs": "5.5.6"
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.0",
+    "babel-preset-env": "1.6.1",
+    "browser-sync": "2.23.5",
+    "del": "3.0.0",
+    "eslint": "4.15.0",
+    "eslint-plugin-requirejs": "3.1.1",
+    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-autoprefixer": "4.1.0",
+    "gulp-cached": "1.1.1",
+    "gulp-check-filesize": "2.0.1",
+    "gulp-cli": "2.0.0",
+    "gulp-cssnano": "2.1.2",
+    "gulp-debug": "3.2.0",
+    "gulp-eslint": "4.0.1",
+    "gulp-exec": "3.0.1",
+    "gulp-filter": "5.1.0",
+    "gulp-foreach": "0.1.0",
+    "gulp-html-replace": "1.6.2",
+    "gulp-htmlmin": "4.0.0",
+    "gulp-if": "2.0.2",
+    "gulp-imagemin": "4.1.0",
+    "gulp-load-plugins": "1.5.0",
+    "gulp-newer": "1.4.0",
+    "gulp-notify": "3.1.0",
+    "gulp-plumber": "1.1.0",
+    "gulp-rename": "1.2.2",
+    "gulp-replace": "0.6.1",
+    "gulp-sass": "3.1.0",
+    "gulp-sourcemaps": "2.6.3",
+    "gulp-svgmin": "1.2.4",
+    "gulp-svgstore": "6.1.1",
+    "gulp-uglify": "3.0.0",
+    "gulp-util": "3.0.8",
+    "gulp.spritesmith": "6.9.0",
+    "imagemin-advpng": "4.0.0",
+    "imagemin-guetzli": "1.0.0",
+    "imagemin-pngout": "2.0.0",
+    "imagemin-pngquant": "5.0.1",
+    "imagemin-zopfli": "5.1.0",
+    "mathsass": "0.10.1",
+    "merge-stream": "1.0.1",
+    "modernizr": "3.5.0",
+    "node-notifier": "5.1.2",
+    "node-sass": "4.7.2",
+    "redux": "3.7.2",
+    "rxjs": "5.5.6"
   },
   "optionalDependencies": {
-      "fsevents": "1.1.3"
+    "fsevents": "1.1.3"
   },
-    "author": "",
-    "license": "ISC"
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "webpack": "3.10.0"
   }
-  
+}
